@@ -1845,6 +1845,11 @@ The two drivers currently supported are pymssql_ and adodbapi_.
 .. _pymssql: http://pymssql.sourceforge.net/
 .. _adodbapi: http://adodbapi.sourceforge.net/
 
+The user can choose a DB API driver for MSSQL by using a "backend"
+parameter in DB URI or MSSQLConnection. Possible backends are: "adodb"
+(alias "adodbapi") and "pymssql". Default is to test adodbapi and pymssql
+in that order.
+
 Events (signals)
 ================
 
